--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
-body{margin-top:20px;}
+
+
+body{
+    margin-top:20px;
+    width: 100%;
+}
 .timeline-steps {
     display: flex;
     justify-content: center;
@@ -66,7 +71,7 @@ body{margin-top:20px;}
 }
 
 .col{
-    height: 100px;
+    height: 100%;
 }
 
 label {
@@ -124,4 +129,9 @@ label {
     #cardText{
         font-size: 2.4vw !important;
     }
+}
+
+footer {
+    position: relative;
+    border-radius: 1px;
 }
