--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 body{
     margin-top:20px;
     width: 100%;
+    height: 100vh;
 }
 .timeline-steps {
     display: flex;
@@ -130,6 +131,8 @@ label {
 }
 
 footer {
-    position: relative;
+    position: absolute;
+    width: 100%;
     border-radius: 1px;
+    bottom: 0px;
 }
